salesforce_sfdx/main/default/objects/Epic_Access__c/Epic_Access__c.object-meta.xml
<CustomObject>
    <label>Epic Access</label>
    <nameField>
        <label>Epic Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Epic Accesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>