salesforce_sfdx/main/default/objects/Epic_Access__c/fields/Expire_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Expire_DateTime__c</fullName>
    <formula>FROMUNIXTIME(ExpireEpoch__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expire DateTime</label>
    <type>DateTime</type>
</CustomField>