salesforce_sfdx/main/default/objects/Epic_Access__c/fields/ExpireEpoch__c.field-meta.xml
<CustomField>
    <fullName>ExpireEpoch__c</fullName>
    <label>ExpireEpoch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>